# Skills

./: .gitignore  CHANGELOG.md  README.md  project_brief.md  project_brief.md.example  pyproject.toml
docs/: api-contracts.md  architecture.md  capability-matrix.md  claude-mcp-setup.md  claude_desktop_config.example.json  commands-reference.md  install-macos.md  pod-system.md  requirements.md  skill-library.md  troubleshooting-macos.md  writing-a-project-brief.md
scripts/: expand_skill_descriptions.py  install_macos.sh  sync_skill_catalog.sh
skill_autopilot/: __init__.py  __main__.py  async_jobs.py  brief_parser.py  catalog.py  claude_setup.py  config.py  db.py  decomposer.py  desktop.py  doctor.py  engine.py  executor.py  lease_manager.py  mcp_server.py  models.py  pods.py  router.py  service.py  utils.py  watcher.py  worker_node.py  worker_pool.py
skill_autopilot/adapters/: __init__.py  base.py  mock.py  native_cli.py
skill_autopilot/skills/ai/finetuning_planner/: SKILL.md
skill_autopilot/skills/ai/guardrail_designer/: SKILL.md
skill_autopilot/skills/ai/inference_cost_optimizer/: SKILL.md
skill_autopilot/skills/ai/model_selection/: SKILL.md
skill_autopilot/skills/ai/prompt_engineer/: SKILL.md
skill_autopilot/skills/ai/rag_designer/: SKILL.md
skill_autopilot/skills/architecture/api_contract_designer/: SKILL.md
skill_autopilot/tests/: test_async_jobs.py  test_brief_parser.py  test_config_defaults.py  test_engine.py  test_observability.py  test_pod_compounding.py  test_skill_catalog_coverage.py  test_skill_description_quality.py  test_worker_pool.py
(+94 files in other folders)
