[project]
name = "skill-autopilot"
version = "0.1.0"
description = "One-click local skill routing and lifecycle manager for Claude/Codex desktop workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "watchdog>=6.0.0",
  "requests>=2.32.0",
  "mcp>=1.26.0",
  "tomli>=2.0.2; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
skill-autopilot-service = "skill_autopilot.service:main"
skill-autopilot-ui = "skill_autopilot.desktop:main"
skill-autopilot-mcp = "skill_autopilot.mcp_server:main"
skill-autopilot-worker = "skill_autopilot.worker_node:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skill_autopilot*"]
